android_slave_projectdir = $(datadir)/android_projects
nobase_android_slave_project_DATA = \
    slave/AndroidManifest.xml \
    slave/README \
    slave/ant.properties \
    slave/build.properties \
    slave/build.xml \
    slave/default.properties \
    slave/jni/Android.mk \
    slave/jni/Application.mk \
    slave/jni/src/Android.mk \
    slave/jni/src/rig-slave.c \
    slave/proguard-project.txt \
    slave/project.properties \
    slave/res/drawable-hdpi/ic_launcher.png \
    slave/res/drawable-mdpi/ic_launcher.png \
    slave/res/drawable-xhdpi/ic_launcher.png \
    slave/res/drawable-xxhdpi/ic_launcher.png \
    slave/res/layout/main.xml \
    slave/res/values/strings.xml \
    slave/src/org/rig/app/RigSlaveActivity.java

android_modulesdir = $(datadir)/android_modules
nobase_android_modules_DATA = \
    config.h \
    rig-defines.h \
    cogl/cogl-defines.h \
    cogl/cogl-egl-defines.h \
    cogl/cogl-gl-header.h
