assetsdir = $(datadir)
assets_DATA = \
	dot.png \
	button.png \
	button-hover.png \
	button-active.png \
	button-disabled.png \
	drop-down-background.png \
	number-slider-background.png \
	slider-background.png \
	slider-handle.png \
	light-bulb.png \
	light.ply \
	record-button.png \
	record-button-selected.png

