assetsdir = $(datadir)
dist_assets_DATA = \
	dot.png \
	transition-view-separator.png \
	transition-view-bg.png \
	button.png \
	button-hover.png \
	button-active.png \
	button-disabled.png \
	drop-down-background.png \
	number-slider-background.png \
	slider-background.png \
	slider-handle.png \
	light-bulb.png \
	light.ply \
	record-button.png \
	record-button-selected.png \
	scroll-button-left-active.png \
	scroll-button-right-active.png \
	scroll-button-up-active.png \
	scroll-button-down-active.png \
	transparency-grid.png \
	fonts.png \
	circle.png \
	diamond.png \
	color-picker-dot.png

