assetsdir = $(datadir)/rig
dist_assets_DATA = \
	dot.png \
	transition-view-separator.png \
	transition-view-bg.png \
	button.png \
	button-hover.png \
	button-active.png \
	button-disabled.png \
	drop-down-background.png \
	number-slider-background.png \
	slider-background.png \
	slider-handle.png \
	light-bulb.png \
	light.ply \
	camera-model.ply \
	record-button.png \
	record-button-selected.png \
	scroll-button-left-active.png \
	scroll-button-right-active.png \
	scroll-button-up-active.png \
	scroll-button-down-active.png \
	transparency-grid.png \
	fonts.png \
	circle.png \
	diamond.png \
	nine-slice.png \
	color-picker-dot.png \
	resize-handle.png \
	top-bar-gradient.png \
	toggle-unselected.png \
	toggle-selected.png \
	document-bg-gradient.png \
	toolbar-bg-gradient.png \
	settings-icon.png \
	chevron-icon.png \
	left-drop-shadow.png \
	bottom-drop-shadow.png \
	tri-fold-up.png \
	tri-fold-down.png \
	magnifying-glass.png \
	connect.png \
	connect-white.png \
	geometry.png \
	geometry-white.png \
	image.png \
	image-white.png \
	video.png \
	video-white.png \
	sound.png \
	sound-white.png \
	logic-white.png \
	logic.png \
	thumb-video.png \
	pointalism.png \
	hair.png \
	circle1.png \
	highlight.png \
	component-delete.png \
	entity.svg \
	entity-white.png \
	entity.png \
	delete-white.png \
	delete.png \
	pointer-white.png \
	pointer.png \
	rotate-white.png \
	rotate.png \
	add-white.png \
	add.png \
	eye-white.png \
	eye.png \
	binary64.png

if HAVE_GTK
dist_assets_DATA += \
	rig.ui
endif

if HAVE_OSX
dist_assets_DATA += \
	rig-key-pub.pem
endif

mimedir = $(datadir)/mime/application
mime_DATA = rig-mime.xml

mimeicondir = $(datadir)/pixmaps
mimeicon_DATA = rig-logo-64.png

desktopdir = $(datadir)/applications
desktop_DATA = rig.desktop

EXTRA_DIST = \
	Info.plist.in
